grabbed menu items from database and displayed them to the DOM

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,11 @@
 
 <body>
   <h1>Order with Henferno</h1>
-  <article id="container"></article>
+  <article id="container">
+    <ul id="menu-list">
+
+    </ul>
+  </article>
 </body>
 
 </html>
