fetch heat levels and display to dom, add order button and name input field

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,11 @@
     <ul id="menu-list">
 
     </ul>
+    <ul id="heat-list">
+
+    </ul>
+    <input type="text" id="name-input" placeholder="your name">
+    <button id="order btn">Place Order</button>
   </article>
 </body>
 
