--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 
     </ul>
     <input type="text" id="name-input" placeholder="your name">
-    <button id="order btn">Place Order</button>
+    <button id="order-btn">Place Order</button>
   </article>
 </body>
 
